--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "tw:watch": "npx tailwindcss -i ./src/tw/input.css -o ./src/tw/output.css --watch"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
